# GoIT_PythonWeb

./: mongodb_personal_assistant.py
SQL_dbs/m08_1/: creat_student_lecture_db.sql  demo.sqlite  groups_202209071225.csv  lectures_202209071226.csv  marks_202209071226.csv  professors_202209071226.csv  sql_query_tasks.txt  students_202209071226.csv
m01_01/: CountingMetaClass.py  DB_Milla.yaml  SerializerDeserializer.py
m02_01/: output_dec.py
m03_01/: docker-compose.yml  main.py  pyproject.toml  requirements.txt
m03_01/data/mongodb/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-1203023641529665033.wt  collection-2-1203023641529665033.wt  index-1-1203023641529665033.wt  index-3-1203023641529665033.wt  sizeStorer.wt
m03_01/data/mongodb/diagnostic.data/: metrics.2022-10-26T09-46-43Z-00000  metrics.2022-10-26T09-53-06Z-00000  metrics.2022-10-26T09-54-18Z-00000  metrics.2022-11-02T18-19-50Z-00000  metrics.2022-11-02T18-31-41Z-00000  metrics.interim
m03_01/src/: models.py
m04_01/: sort.py
m05_01/: factorize_function.py
m06_01/: sort_asyncio.py
m07_01/: client.py  server.py
m09_01/: main.py  pyproject.toml
m09_01/migration/: env.py
m09_01/migration/versions/: 01997c851489_init.py  7211e5e0678c_init.py
m09_01/src/: db.py  model.py  seed.py
m10_01/: main.py
m10_01/lru_cache/: requests_cache_redis.py
m10_01/src/: methods.py  models.py
m11_01/: app.py
m11_01/src/: db.py  models.py
m11_01/templates/: contact.html  detail.html  index.html
m14_01/: main.py  pyproject.toml  scrup_authors.db
m14_01/src/: db.py  models.py
