[tool.poetry]
name = "m10_01"
version = "0.1.0"
description = ""
authors = ["kovalch <nataliia.kovalchuk@liip.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv tls"], version = "^4.3.2"}
mongoengine = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
