[tool.poetry]
name = "m09_01"
version = "0.1.0"
description = ""
authors = ["kovalch <nataliia.kovalchuk@liip.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^14.2.0"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
cmake = "^3.24.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
