[tool.poetry]
name = "m14_01"
version = "0.1.0"
description = ""
authors = ["kovalch <nataliia.kovalchuk@liip.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
beautifulsoup4 = "^4.11.1"
SQLAlchemy = "^1.4.43"
loader = "^2017.9.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
